image upload and resize

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -28,6 +28,10 @@
 <div><%= f.label :age %><br />
     <%= f.text_field :age %></div>
 
+    <div>
+      <%= f.file_field :image %>
+    </div>
+
   <div><%= f.submit "Update" %></div>
 <% end %>
 
