--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -4,19 +4,19 @@
 
 <table>
   <tr>
-    <th>Name</th>
-    <th>User ID</th>
+    <th>Location</th>
     <th>Start Date</th>
-     <th>End Date</th>
+    <th>End Date</th>
+     <th>User ID</th>
     <th colspan="3"></th>
   </tr>
  
   <% @destinations.each do |destination| %>
     <tr>
-      <td><%= destination.name %></td>
-      <td><%= destination.user_id %> </td>
+      <td><%= destination.location %></td>
       <td><%= destination.start_date %> </td>
       <td><%= destination.end_date %> </td>
+      <td><%= destination.user_id %> </td>
       <td><%= link_to 'Show', destination_path(destination) %></td>
       <td><%= link_to 'Edit', edit_destination_path(destination) %></td>
       <td><%= link_to 'Destroy', destination_path(destination), method: :delete, data: { confirm: 'Sure?' } %></td>
