--- a/app/views/destinations/_form.html.erb
+++ b/app/views/destinations/_form.html.erb
@@ -11,23 +11,23 @@
   </div>
   <% end %>
   <p>
-    <%= f.label :Destination %><br>
-    <%= f.text_field :destination_name %>
+    <%= f.label :Location %><br>
+    <%= f.text_field :location %>
   </p>
  
   <p>
-    <%= f.label :User_id %><br>
-    <%= f.text_field :user_id %>
-  </p>
- 
- <p>
     <%= f.label :Start_date %><br>
     <%= f.text_field :start_date %>
   </p>
-
-  <p>
+ 
+ <p>
     <%= f.label :End_date %><br>
     <%= f.text_field :end_date %>
+  </p>
+
+  <p>
+    <%= f.label :User_id %><br>
+    <%= f.text_field :user_id %>
   </p>
 
   <p>
