--- a/app/views/Messages/index.html.erb
+++ b/app/views/Messages/index.html.erb
@@ -1,4 +1,25 @@
 <h1> Message Dashboard<h1>
 
 
+
+<table>
+  <tr>
+    <th>Sender</th>
+    <th>Receiver</th>
+    <th>Title</th>
+    <th>Text</th>
+  </tr>
+ <% @messages.each do |msg| %>
+	<tr>
+		<% if msg.reciever == current_user.id %>
+		    <td><%= msg.sender %></td>
+		    <td><%= msg.reciever %> </td>
+		    <td><%= msg.title %> </td>
+		    <td><%= msg.message_text %> </td>
+	    <% end %>
+    </tr>
+<% end %>
+
+</table>
+
 <%= link_to "new messages", new_message_path %>
