--- a/app/views/destinations/_form.html.erb
+++ b/app/views/destinations/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @destination do |f| %>
-  <% if @destination.errors.any? %>
+<!--   <% if @destination.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(@destination.errors.count, "error") %> prohibited
       this destination from being saved:</h2>
@@ -9,7 +9,7 @@
     <% end %>
     </ul>
   </div>
-  <% end %>
+  <% end %> -->
   <p>
     <%= f.label :Location %><br>
     <%= f.text_field :location %>
