--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,12 +1,12 @@
 <h1>Listing Destinations</h1>
- 
+ <%= link_to "Where are you going?", new_destination_path %>
 
 <table>
   <tr>
-    <th>Location</th>
-    <th>Start Date</th>
-    <th>End Date</th>
-     <th>User ID</th>
+    <th>| Location |</th>
+    <th>| Start Date |</th>
+    <th>| End Date |</th>
+     <th>| User ID |</th>
     <th colspan="3"></th>
   </tr>
  
