--- a/app/views/Messages/show.html.erb
+++ b/app/views/Messages/show.html.erb
@@ -9,4 +9,7 @@
 </p> 
 
 <%= link_to 'Back', messages_path %>
-| <%= link_to 'Edit', edit_message_path(@message) %>
+<% if current_user == @message.sender %>  
+<%= link_to 'Edit', edit_message_path(@message) %>
+<% end %>
+<%= link_to 'Reply', new_message_path %>
