--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,17 +1,17 @@
-<h1>Listing Destinations</h1>
- 
+<h3>Listing Destinations</h1>
 
-<table>
-  <tr>
-    <th>Location</th>
-    <th>Start Date</th>
-    <th>End Date</th>
-     <th>User ID</th>
-    <th colspan="3"></th>
-  </tr>
- 
-  <% @destinations.each do |destination| %>
+<table class="table table-striped table-hover ">
+  <thead>
     <tr>
+      <th>Location</th>
+      <th>Start Date</th>
+      <th>End Date</th>
+      <th>User ID</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @destinations.each do |destination| %>
+    <tr class="success">
       <td><%= destination.location %></td>
       <td><%= destination.start_date %> </td>
       <td><%= destination.end_date %> </td>
@@ -21,5 +21,6 @@
       <td><%= link_to 'Destroy', destination_path(destination), method: :delete, data: { confirm: 'Sure?' } %></td>
     </tr>
   <% end %>
+  </tbody>
+</table> 
 
-</table>
