--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,18 @@
-<h1>Listing Users</h1>
- 
-<%= link_to 'New Destinations', new_destination_path %> | <%= link_to 'Users', users_path %> | <%= link_to 'Messaging', messages_path %> <br><br>
+<h1>Users</h1>
 
-<table>
-  <tr>
-    <th>Email</th>
-    <th>Gender</th>
-    <th>Age</th>
-  </tr>
- 
-  <% @users.each do |user| %>
+<h4><%= link_to 'New Destinations', new_destination_path %> | <%= link_to 'Users', users_path %> | <%= link_to 'Messaging', messages_path %></h4> <br><br>
+
+<table class="table table-striped table-hover ">
+  <thead>
     <tr>
+      <th>Email</th>
+      <th>Gender</th>
+      <th>Age</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @users.each do |user| %>
+    <tr class="success">
       <% if user.id != current_user.id %>
         <td><%= user.email %></td>
         <td><%= user.gender %> </td>
@@ -19,5 +21,5 @@
       <% end %>
     </tr>
   <% end %>
-
-</table>
+  </tbody>
+</table> 
