--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,2 +1,24 @@
 <h3>Welcome</h3>
-<p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
+
+
+<h6>Users:<%= User.count %> registered</h6>
+
+<table class="table table-striped table-hover ">
+  <thead>
+    <tr>
+      <th>Email</th>
+      <th>Gender</th>
+      <th>Age</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% User.all.each do |user| %>
+    <tr class="success">
+          <td><%= user.email %></td>
+          <td><%= user.gender %> </td>
+          <td><%= user.age %> </td>
+    </tr>
+  <% end %>
+  </tbody>
+</table> 
+
