--- a/app/assets/stylesheets/cyborg/variables.less
+++ b/app/assets/stylesheets/cyborg/variables.less
@@ -25,9 +25,9 @@
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-@body-bg:               #060606;
+@body-bg:               white;
 //** Global text color on `<body>`.
-@text-color:            @gray-light;
+@text-color:            #000000;
 
 //** Global textual link color.
 @link-color:            @brand-primary;
@@ -65,7 +65,7 @@
 @headings-font-family:    @font-family-base;
 @headings-font-weight:    500;
 @headings-line-height:    1.1;
-@headings-color:          #fff;
+@headings-color:          black;
 
 
 //== Iconography
