--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -1,4 +1,6 @@
-	
+ <div class="container">
+ 	<div class="row">
+ 		<div class="col-md-6">
 <p>
   <strong>Location:</strong>
   <%= @destination.location %>
@@ -21,3 +23,6 @@
 
 <%= link_to 'Back', destinations_path %>
 | <%= link_to 'Edit', edit_destination_path(@destination) %>
+</div>
+</div>
+</div>
