--- a/app/views/Messages/show.html.erb
+++ b/app/views/Messages/show.html.erb
@@ -1,4 +1,7 @@
-<p>
+ <div class="container">
+ 	<div class="row">
+ 		<div class="col-md-6">
+ 		<p>
   <strong>Title:</strong>
   <%= @message.title %>
 </p>
@@ -13,3 +16,6 @@
 <%= link_to 'Edit', edit_message_path(@message) %>
 <% end %>
 <%= link_to 'Reply', new_message_path %>
+</div>
+</div>
+</div>
