--- a/app/views/destinations/_form.html.erb
+++ b/app/views/destinations/_form.html.erb
@@ -1,4 +1,7 @@
-<%= form_for @destination do |f| %>
+ <div class="container">
+  <div class="row">
+    <div class="col-md-6">
+    <%= form_for @destination do |f| %>
 
   <p>
     <%= f.label :Location %><br>
@@ -23,3 +26,6 @@
     <%= f.submit %>
   </p>
 <% end %>
+</div>
+</div>
+</div>
