--- a/app/views/destinations/edit.html.erb
+++ b/app/views/destinations/edit.html.erb
@@ -1,5 +1,12 @@
-<h1>Editing Destinations</h1>
- 
-<%= render 'form' %>
+ <div class="container">
+ 	<div class="row">
+ 		<div class="col-md-6">
+			<h1>Editing Destinations</h1>
+			 
+			<%= render 'form' %>
 
-<%= link_to 'Back', destinations_path %>
+			<%= link_to 'Back', destinations_path %>
+		</div>
+	</div>
+	<div class="col-md-6"></div>
+</div>
