--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,23 +1,12 @@
-<<<<<<< HEAD
-<h1>Listing Destinations</h1>
- <%= link_to "Where are you going?", new_destination_path %>
 
-<table>
-  <tr>
-    <th>| Location |</th>
-    <th>| Start Date |</th>
-    <th>| End Date |</th>
-     <th>| User ID |</th>
-    <th colspan="3"></th>
-  </tr>
- 
-  <% @destinations.each do |destination| %>
-=======
-<h3>Listing Destinations</h1>
 
+ <div class="container">
+  <div class="row">
+    <div class="col-md-6">
+    <h3>Listing Destinations</h1>
 <table class="table table-striped table-hover ">
   <thead>
->>>>>>> a1f80439b2b485a4e0f40dd7f3a15296064a39c1
+
     <tr>
       <th>Location</th>
       <th>Start Date</th>
@@ -39,4 +28,7 @@
   <% end %>
   </tbody>
 </table> 
+</div>
+</div>
+</div>
 
