--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,11 @@
-
+ <div class="container">
+ 	<div class="row">
+ 		<div class="col-md-6">
 <td><%= link_to user.email, user %></td>
 
 <td> <%= image_tag user.image %> </td>
 
 <td> <%= image_tag user.image_url(:small_image) if user.image? %> </td>
+</div>
+</div>
+</div>
