--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,13 @@
 
+
+
+<div class="container">
+  <div class="row">
+  <div class="col-md-6">
+<table class="table table-striped table-hover ">
 <h1>Users</h1>
 
 <h4><%= link_to 'New Destinations', new_destination_path %> | <%= link_to 'Users', users_path %> | <%= link_to 'Messaging', messages_path %></h4> <br><br>
-
-<table class="table table-striped table-hover ">
   <thead>
     <tr>
       <th>Email</th>
@@ -23,5 +27,11 @@
     </tr>
   <% end %>
   </tbody>
-</table> 
+</table>
+</div>
+</div>
+<div class="col-md-6"></div> 
+</div>
+
+
 
