--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,15 @@
-<h3>My Profile</h3>
-<p><%= image_tag @user.image_url.to_s %></p>
-<p>Email: <%= @user.email if @user.email %></p>
-<p>Gender: <%= @user.gender if @user.gender %></p>
-<p>Seeking Gender: <%= @user.seeking_gender if @user.seeking_gender %></p>
-<p>Age: <%= @user.age if @user.age %></p>
 
-
-
-<%= link_to 'Back', users_path %>
+<div class="container">
+	<div class="row">
+			<div class="col-md-6">
+				<h3>My Profile</h3>
+				<p><%= image_tag @user.image_url.to_s %></p>
+				<p>Email: <%= @user.email if @user.email %></p>
+				<p>Gender: <%= @user.gender if @user.gender %></p>
+				<p>Seeking Gender: <%= @user.seeking_gender if @user.seeking_gender %></p>
+				<p>Age: <%= @user.age if @user.age %></p>
+				<%= link_to 'Back', users_path %>
+			</div>
+	<div class="col-md-6"></div>
+	</div>
+</div>
