--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -16,10 +16,10 @@
   <%= @destination.end_date %>
 </p> 
 
-<p>
+<!-- <p>
   <strong>User ID:</strong>
-  <%= @destination.user_id %>
-</p> 
+  <%#= @destination.user_id %>
+</p>  -->
 
 <%= link_to 'Back', destinations_path %>
 | <%= link_to 'Edit', edit_destination_path(@destination) %>
