--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -6,20 +6,12 @@
     <h3>Listing Destinations</h1>
 <table class="table table-striped table-hover ">
   <thead>
-<<<<<<< HEAD
-<<<<<<< HEAD
->>>>>>> f3c463ec561e96c0e1ef260827d9edc0816936f0
-=======
->>>>>>> a1f80439b2b485a4e0f40dd7f3a15296064a39c1
->>>>>>> 2d8d02f6f5f6fe94cec745456b8c826473cd0e45
-=======
 
->>>>>>> fcfdb5fe44bd40c482bbdad64cbdadba71d683f2
     <tr>
       <th>Location</th>
       <th>Start Date</th>
       <th>End Date</th>
-      <th>User ID</th>
+   <!--    <th>User ID</th> -->
     </tr>
   </thead>
   <tbody>
@@ -28,7 +20,7 @@
       <td><%= destination.location %></td>
       <td><%= destination.start_date %> </td>
       <td><%= destination.end_date %> </td>
-      <td><%= destination.user_id %> </td>
+    <!--   <td><%= destination.user_id %> </td> -->
       <td><%= link_to 'Show', destination_path(destination) %></td>
       <td><%= link_to 'Edit', edit_destination_path(destination) %></td>
       <td><%= link_to 'Destroy', destination_path(destination), method: :delete, data: { confirm: 'Sure?' } %></td>
