small css improvements

--- a/app/views/Messages/_form.html.erb
+++ b/app/views/Messages/_form.html.erb
@@ -1,6 +1,8 @@
  <div class="container">
   <div class="row">
-    <div class="col-md-6"><%= form_for @message do |f| %>
+    <div class="col-md-6">
+
+    <%= form_for @message, :class => 'form_group' do |f| %>
   <p>
     <%= f.label :reciever_id %><br>
    <%= f.select :reciever_id, options_for_select(@user.collect{ |c| [c.email, c.id] }, f.object.reciever_id)%>
