--- a/app/views/Messages/index.html.erb
+++ b/app/views/Messages/index.html.erb
@@ -1,11 +1,11 @@
-<<<<<<< HEAD
+
 
 <div class="container">
 	<div class="row">
 	<div class="col-md-6">
 <h1> Message Dashboard</h1>
 <%= link_to "new messages", new_message_path %>
-<table>
+<table class= "table table-hover">
   <tr>
     <th>Sender</th>
     <th>Receiver</th>
@@ -29,30 +29,5 @@
 </div>
 	
 
-=======
-<h3> Message Dashboard<h3>
 
-<table class="table table-striped table-hover ">
-  <thead>
-	  <tr>
-	    <th>Sender</th>
-	    <th>Receiver</th>
-	    <th>Title</th>
-	    <th>Text</th>
-	  </tr>
-  </thead>
-  <tbody>
-	     <% @messages.each do |msg| %>
-		<tr class="success">
-			<% if msg.reciever == current_user.id %>
-			    <td><%= msg.sender %></td>
-			    <td><%= msg.reciever %> </td>
-			    <td><%= msg.title %> </td>
-			    <td><%= msg.message_text %> </td>
-		    <% end %>
-	    </tr>
-	    <% end %>
-  </tbody>
-</table> 
->>>>>>> f3c463ec561e96c0e1ef260827d9edc0816936f0
 
