--- a/app/views/layouts/cyborg.html.erb
+++ b/app/views/layouts/cyborg.html.erb
@@ -1,56 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "travel_conpanions" %></title>
-    <%= csrf_meta_tags %>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= content_for?(:title) ? yield(:title) : "travel_conpanions" %></title>
+  <%= csrf_meta_tags %>
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+  <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
-    <![endif]-->
+      <![endif]-->
 
-    <%= stylesheet_link_tag "cyborg", :media => "all" %>
+      <%= stylesheet_link_tag "cyborg", :media => "all" %>
 
-    <%= yield(:page_stylesheet) if content_for?(:page_stylesheet) %>
+      <%= yield(:page_stylesheet) if content_for?(:page_stylesheet) %>
 
-  </head>
-  <body>
+    </head>
+    <body>
 
-    <%= yield %>
+      <%= yield %>
 
-    <!-- Fixed navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <p class="navbar-brand"><button type="button" class="btn btn-success"><%= link_to "Home", root_path %></button></p>
-          <p class="navbar-brand"><button type="button" class="btn btn-success"><%= link_to "Add Destination", destinations_path %></button></p>
-          <p class="navbar-brand"><button type="button" class="btn btn-success"><%= link_to "My Messages", messages_path %></button></p>
-          <p class="navbar-brand"><button type="button" class="btn btn-success"><%= link_to "My Profile", user_path((current_user.id)) %></button></p>
-        </div>
+      <!-- Fixed navbar -->
+      <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <p class="navbar-brand"><button type="button" class="btn btn-success"><%= link_to "Home", root_path %></button></p>
+            <% if current_user %>
 
-        <div class="navbar-text pull-right">
-          <% if user_signed_in? %>
+            <p class="navbar-brand"><button type="button" class="btn btn-success"><%= link_to "Add Destination", destinations_path %></button></p>
+            <p class="navbar-brand"><button type="button" class="btn btn-success"><%= link_to "My Messages", messages_path %></button></p>
+            <p class="navbar-brand"><button type="button" class="btn btn-success"><%= link_to "My Profile", user_path(current_user.id) %></button></p>
+
+            <% end %>
+
+          </div>
+
+          <div class="navbar-text pull-right">
+            <% if user_signed_in? %>
             Logged in as <strong><%= current_user.email %></strong>.
             <br>
             <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
             <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-          <% else %>
+            <% else %>
             <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
             <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-          <% end %>
+            <% end %>
+          </div>
         </div>
       </div>
-    </div>
 
-   
+
 
     <!-- Javascripts
     ================================================== -->
@@ -58,4 +63,4 @@
     <%= javascript_include_tag "cyborg" %>
     <%= yield(:page_javascript) if content_for?(:page_javascript) %>
   </body>
-</html>
+  </html>
