--- a/app/assets/stylesheets/cyborg/variables.less
+++ b/app/assets/stylesheets/cyborg/variables.less
@@ -30,7 +30,7 @@
 @text-color:            #000000;
 
 //** Global textual link color.
-@link-color:            @brand-primary;
+@link-color:            grey;
 //** Link hover color set via `darken()` function.
 @link-hover-color:      @link-color;
 
