bug fixes and text color changes

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -10,7 +10,14 @@
 
     </div>
     <div class="col-md-6"> </div>
-    <div class="col-md-2"><h3 style="color: white; opacity 1.0;"><strong> <a href="/users/sign_up"><font color="FFFFFF">Sign Up Now!</a></strong> </h2></div>
+    <div class="col-md-2">
+
+    <% unless user_signed_in? %>
+      <h3 style="color: white; opacity 1.0;"><strong> <a href="/users/sign_up"><font color="FFFFFF">Sign Up Now!</a></strong> </h2>
+    <% end %>
+
+
+      </div>
+    </div>
   </div>
-</div>
 
