--- a/app/views/destinations/new.html.erb
+++ b/app/views/destinations/new.html.erb
@@ -1,13 +1,13 @@
  <div class="container">
  	<div class="row">
  		<div class="col-md-6">
- 		<h1>New Destination</h1>
+ 		<h1 style="color: white;">New Destination</h1>
 
-<%= @curr_user.email %>
+
 
 <%= render 'form' %>
 
-<%= link_to 'Back', destinations_path %>
+
 </div>
 </div>
 </div>
