--- a/app/views/layouts/cyborg.html.erb
+++ b/app/views/layouts/cyborg.html.erb
@@ -32,6 +32,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Active</a></li>
             <li><%= link_to '| Home |', "/" %></a></li>
+            <li><%= link_to '| Users |', "/users" %></a></li>
             <li><%= link_to '| Messages |', messages_path %></li>
             <li><%= link_to '| Destinations |', destinations_path %></li>
             
