--- a/app/assets/stylesheets/cyborg/variables.less
+++ b/app/assets/stylesheets/cyborg/variables.less
@@ -27,7 +27,7 @@
 //** Background color for `<body>`.
 @body-bg:               white;
 //** Global text color on `<body>`.
-@text-color:            #000000;
+@text-color:            black;
 
 //** Global textual link color.
 @link-color:            @brand-primary;
