--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,7 +1,7 @@
  <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <h3>Listing Destinations</h1>
+      <h1 style="color: white;">Listing Destinations</h1>
         <%= link_to "Where are you going?", new_destination_path %>
         <table class="table table-striped table-hover ">
           <thead>
