--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
   <div class="row">
   <div class="col-md-6">
 <table class="table table-striped table-hover ">
-<h1>Users</h1>
+<h1 style="color: white;">Users</h1>
 <h4><%= link_to 'New Destinations', new_destination_path %> | <%= link_to 'Users', users_path %> | <%= link_to 'Messaging', messages_path %></h4> <br><br>
   <thead>
     <tr>
