filter sort dest

--- a/app/views/layouts/cyborg.html.erb
+++ b/app/views/layouts/cyborg.html.erb
@@ -34,6 +34,7 @@
             <li><%= link_to '| Home |', "/" %></a></li>
             <li><%= link_to '| Messages |', messages_path %></li>
             <li><%= link_to '| Destinations |', destinations_path %></li>
+            <li><%= link_to '| Find me a Date |', visitors_show_path %></li>
             
               </ul>
             </li>
