--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-6">
       <h1 style="color: white;">Listing Destinations</h1>
-        <%= link_to "Where are you going?", new_destination_path %>
+        <a href="destinations/new" class="btn btn-default">New Destination</a>
         <table class="table table-striped table-hover ">
           <thead>
             <tr>
