--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
   <div class="col-md-6">
 <table class="table table-striped table-hover ">
 <h1 style="color: white;">Users</h1>
-<h4><%= link_to 'New Destinations', new_destination_path %> | <%= link_to 'Users', users_path %> | <%= link_to 'Messaging', messages_path %></h4> <br><br>
+
   <thead>
     <tr>
       <th>Email</th>
@@ -23,7 +23,9 @@
         <td><%= user.email %></td>
         <td><%= user.gender %> </td>
         <td><%= user.age %> </td>
-        <td><%= user.destinations.last %></td>
+        <% unless user.destinations.count == 0 %>
+        <td><%= user.destinations.last.location %></td>
+        <% end %>
         <td><%= link_to 'Send message', new_message_path(user.id) %></td>
       <% end %>
     </tr>
