--- a/app/views/Messages/index.html.erb
+++ b/app/views/Messages/index.html.erb
@@ -1,6 +1,7 @@
 
 <div class="container">
 	<div class="row">
+		<div class="col-md-6"></div>
 		<div class="col-md-6">
 			<h1> <FONT COLOR="white">Message Dashboard</FONT></h1>
 			<%= link_to "new messages", new_message_path %>
