heroku testing broken though

--- a/app/views/Messages/index.html.erb
+++ b/app/views/Messages/index.html.erb
@@ -1,8 +1,15 @@
+<html style="
+  background: url(http://cdn0.dailydot.com/uploaded/images/original/2013/2/28/followgram8.jpg) no-repeat center center fixed;  
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;">
+
+
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-6"></div>
-		<div class="col-md-6">
+		<div class="col-md-offset-6">
 			<h1> <FONT COLOR="white">Message Dashboard</FONT></h1>
 			<%= link_to "new messages", new_message_path %>
 			<table class= "table table-bordered table-hover">
