--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,12 @@
-<div class="container">
-  <div class="row">
-<<<<<<< HEAD
+<html style="
+  background: url(http://media2.s-nbcnews.com/i/MSNBC/Components/Video/2014/01_January/140104/tdy_photog_140104.jpg) no-repeat center center fixed;  
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;">
+
+
+
   <div class="col-md-6">
 <table class="table table-striped table-hover ">
 <h1 style="color: white;">Users</h1>
@@ -23,6 +29,8 @@
         <td><%= user.age %> </td>
         <% unless user.destinations.count == 0 %>
         <td><%= user.destinations.last.location %></td>
+        <% else %>
+        <td> Still Planning </td>
         <% end %>
         <td><%= link_to 'Send message', new_message_path(user.id) %></td>
       <% end %>
@@ -32,39 +40,6 @@
 </table>
 </div>
 </div>
-=======
-    <div class="col-md-6">
-      <table class="table table-striped table-hover ">
-        <h1>Users</h1>
-        <h4><%= link_to 'New Destinations', new_destination_path %> | <%= link_to 'Users', users_path %> | <%= link_to 'Messaging', messages_path %></h4> <br><br>
-        <thead>
-          <tr>
-            <th>Email</th>
-            <th>Gender</th>
-            <th>Age</th>
-            <th>Latest Destination</th>
-            <th>Contact Now! </th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @users.each do |user| %>
-          <tr class="success">
-            <% if user.id != current_user.id %>
-            <td><%= user.email %></td>
-            <td><%= user.gender %> </td>
-            <td><%= user.age %> </td>
-            <td><%= user.destinations.last %></td>
-            <td><%= link_to 'Send message', new_message_path(user.id) %></td>
-            <% end %>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-  </div>
->>>>>>> dd607f2520bd648596708444de12500c3f118225
-</div>
-<div class="col-md-6"></div> 
 
 
 
