--- a/app/views/destinations/_form.html.erb
+++ b/app/views/destinations/_form.html.erb
@@ -11,12 +11,12 @@
  
   <p>
     <%= f.label :Start_date %><br>
-    <%= f.text_field :start_date %>
+     <%= f.date_select :start_date %>
   </p>
  
  <p>
     <%= f.label :End_date %><br>
-    <%= f.text_field :end_date %>
+    <%= f.date_select :end_date %>
   </p>
 
   <p>
