--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 
-<div class="container">
+<div class="container-fluid">
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-sm-6">
 			<h3>My Profile</h3>
 			<p>Email: <%= @user.email if @user.email %></p>
 			<p>Gender: <%= @user.gender if @user.gender %></p>
