added more css, custom less css classees

--- a/app/assets/stylesheets/cyborg/bootswatch.css.less
+++ b/app/assets/stylesheets/cyborg/bootswatch.css.less
@@ -172,7 +172,33 @@ a.thumbnail.active {
  }
 
 
+.opgreen {
+
+  background-color:rgba(169, 239, 31, .7);
+  text-shadow: black 0.1em 0.1em 0.2em;
+
+}
+
+.opbrown {
+
+  background-color:rgba(162, 123, 32, .7);
+  text-shadow: black 0.1em 0.1em 0.2em;
+
+}
+
+.opyellow {
+
+ background-color:rgba(230, 226, 21, .6);
+ text-shadow: black 0.1em 0.1em 0.2em;
+
+
+}
+
+.tbold {
+
+  font-weight: 999;
  // messing with backgrounds 
+}
 
 
 
