--- a/app/assets/stylesheets/cyborg/variables.less
+++ b/app/assets/stylesheets/cyborg/variables.less
@@ -27,7 +27,7 @@
 //** Background color for `<body>`.
 @body-bg:               white;
 //** Global text color on `<body>`.
-@text-color:            black;
+@text-color:            white;
 
 //** Global textual link color.
 @link-color:            grey;
@@ -343,13 +343,13 @@
 @navbar-collapse-max-height:       170px;
 
 @navbar-default-color:             @text-color;
-@navbar-default-bg:                fade(#4D94FF, 40%);
+@navbar-default-bg:                fade(@gray-dark, 60%);
 @navbar-default-border:            @gray-dark;
 
 
 // Navbar links
 @navbar-default-link-color:                @text-color;
-@navbar-default-link-hover-color:          #fff;
+@navbar-default-link-hover-color:          red;
 @navbar-default-link-hover-bg:             transparent;
 @navbar-default-link-active-color:         #fff;
 @navbar-default-link-active-bg:            transparent;
