--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -9,19 +9,25 @@
  <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <h1 style="color: white;">Listing Destinations</h1>
+      <h1 style="color: white; text-shadow: black 0.1em 0.1em 0.2em;">Listing Destinations</h1>
       <a href="destinations/new" class="btn btn-default">New Destination</a>
-      <table class="table table-striped table-hover ">
-        <thead>
+
+
+
+      <table class="table table-hover opbrown" >
+        <thead style="background-color: black;">
           <tr>
             <th>Location</th>
             <th>Start Date</th>
             <th>End Date</th>
+            <th>Show</th>
+            <th>Edit</th>
+            <th>Delete</th>
           </tr>
         </thead>
         <tbody>
           <% @destinations.each do |destination| %>
-          <tr class="success" style="background-color: opacity .5;">
+          <tr >
             <td><%= destination.location %></td>
             <td><%= destination.start_date %> </td>
             <td><%= destination.end_date %> </td>
