--- a/app/views/layouts/cyborg.html.erb
+++ b/app/views/layouts/cyborg.html.erb
@@ -19,7 +19,7 @@
     </head>
     <body >
       <!-- Fixed navbar -->
-      <div class="navbar navbar-default" >
+      <div class="navbar navbar-default">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
             <span class="icon-bar"></span>
@@ -31,11 +31,11 @@
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Active</a></li>
-            <li><%= link_to '| Home |', "/" %></a></li>
-            <li><%= link_to '| Users |', "/users" %></a></li>
-            <li><%= link_to '| Messages |', messages_path %></li>
-            <li><%= link_to '| Destinations |', destinations_path %></li>
-            <li><%= link_to '| Find me a Date |', visitors_show_path %></li>
+            <li><%= link_to 'Home', "/", style: "font-weight: 1px;" %></a></li>
+            <li><%= link_to 'Users', "/users", class: "tstrong" %></a></li>
+            <li><%= link_to 'Messages', messages_path, class: "tstrong" %></li>
+            <li><%= link_to 'Destinations', destinations_path, class: "tstrong" %></li>
+            <li><%= link_to ' Find me a Date ', visitors_show_path %></li>
             
               </ul>
             </li>
