--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,29 @@
 <html style="
-  background: url(http://media2.s-nbcnews.com/i/MSNBC/Components/Video/2014/01_January/140104/tdy_photog_140104.jpg) no-repeat center center fixed;  
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;">
+background: url(http://media2.s-nbcnews.com/i/MSNBC/Components/Video/2014/01_January/140104/tdy_photog_140104.jpg) no-repeat center center fixed;  
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;">
 
+<div class="container">
+<div class="row">
+<div class="col-md-4">
+  <table class="table table-hover opbrown">
+    <h1 style="color: white; text-shadow: black 0.1em 0.1em 0.2em;">Users</h1>
 
-
-  <div class="col-md-6">
-<table class="table table-striped table-hover ">
-<h1 style="color: white;">Users</h1>
-
-  <thead>
-    <tr>
-      <th>Email</th>
-      <th>Gender</th>
-      <th>Age</th>
-      <th>Latest Destination</th>
-      <th>Contact Now! </th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |user| %>
-    <tr class="success">
-      <% if user.id != current_user.id %>
+    <thead style="background-color: black; text-color: white;">
+      <tr>
+        <th>Email</th>
+        <th>Gender</th>
+        <th>Age</th>
+        <th>Latest Destination</th>
+        <th>Contact Now! </th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
+      <tr>
+        <% if user.id != current_user.id %>
         <td><%= user.email %></td>
         <td><%= user.gender %> </td>
         <td><%= user.age %> </td>
@@ -33,13 +33,15 @@
         <td> Still Planning </td>
         <% end %>
         <td><%= link_to 'Send message', new_message_path(user.id) %></td>
+        <% end %>
+      </tr>
       <% end %>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
 </div>
 </div>
+</div>
+
 
 
 
