--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -13,7 +13,8 @@
     <div class="col-md-2">
 
     <% unless user_signed_in? %>
-      <h3 style="color: white; opacity 1.0;"><strong> <a href="/users/sign_up"><font color="FFFFFF">Sign Up Now!</a></strong> </h2>
+      <h3 style="color: white; opacity 1.0;"><strong> <a href="/users/sign_up"><font color="FFFFFF">Sign Up Now!</a></strong> </h3>
+      <h5 style="color: white; opacity 1.0;"><strong> <a href="/users/sign_up"><font color="FFFFFF"><%= User.all.count %> Users registered.</a></strong> </h5>
     <% end %>
 
 
