--- a/app/views/Messages/index.html.erb
+++ b/app/views/Messages/index.html.erb
@@ -12,7 +12,7 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-6" style="background-color: :white;">
+		<div class="col-md-6" style="background-color: white;">
 			<h1 style=" color: white; text-shadow: black 0.1em 0.1em 0.2em; ">Message Dashboard</FONT></h1>
 			<a href="messages/new" class="btn btn-default">New Message</a>
 			<table class= "table table-bordered table-hover" style="background-color:rgba(169, 239, 31, .7);text-shadow: black 0.1em 0.1em 0.2em;">
