--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -5,7 +5,7 @@
 
 
       <h2 style="color: white; opacity: 1.0;text-shadow: black 0.1em 0.1em 0.2em"><strong> Welcome to Travel Tinder </strong> </h2>
-      <h2 style="color: white;text-shadow: black 0.1em 0.1em 0.2em"><strong>your <em>perfect</em> adventuring partner lies within.qwertyuiop</strong></h2>
+      <h2 style="color: white;text-shadow: black 0.1em 0.1em 0.2em"><strong>your <em>perfect</em> adventuring partner lies within.</strong></h2>
 
 
     </div>
