--- a/app/views/destinations/_form.html.erb
+++ b/app/views/destinations/_form.html.erb
@@ -1,7 +1,7 @@
  <div class="container">
   <div class="row">
     <div class="col-md-4" style="background-color: white; opacity: .75; border: 2px solid;
-    border-radius: 25px; padding-bottom: 20px; padding-top: 20px;">
+    border-radius: 25px; padding-bottom: 20px; padding-top: 20px; color: black;">
     <%= form_for @destination do |f| %>
 
   <p>
