fixed exit profile color

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
  <div class="container">
   <div class="row">
-  <div class="col-md-4" style="background-color: white; opacity: .75; border: 2px solid; text-color: white;
+  <div class="col-md-4" style="background-color: white; color: black; opacity: .75; border: 2px solid; text-color: white;
     border-radius: 25px;">
 
 
